--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1146239070265504');
+fbq('init', '2183897058736106');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1146239070265504&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=2183897058736106&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
   
@@ -37,7 +37,7 @@ src="https://www.facebook.com/tr?id=1146239070265504&ev=PageView&noscript=1"
 
   <div class="hero">
     <p class="paragraph">Loss in Cricket? Join Telegram </p>
-    <h1 class="heading1">  PAYAL FIXING  </h1>
+    <h1 class="heading1">  TOSS LOAD ORIGINAL </h1>
     <div class="points">
       <h4> WORLD RECORD</h4>
       <ul>
