--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PAYAL FIXING</title>
+<title>TOSS LOAD </title>
 <link rel="stylesheet" href="style2.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,6 @@ src="https://www.facebook.com/tr?id=2183897058736106&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
   
-  
 </head>
 <body>
 
@@ -37,11 +36,11 @@ src="https://www.facebook.com/tr?id=2183897058736106&ev=PageView&noscript=1"
 
   <div class="hero">
     <p class="paragraph">Loss in Cricket? Join Telegram </p>
-    <h1 class="heading1">  TOSS LOAD ORIGINAL </h1>
+    <h1 class="heading1">  TOSS LOAD ORIGINAL  </h1>
     <div class="points">
       <h4> WORLD RECORD</h4>
       <ul>
-        <li><i class="fa fa-check-circle" aria-hidden="true"></i> BACK TO BACK PASS IN BBL </li>
+        <li><i class="fa fa-check-circle" aria-hidden="true"></i> BACK TO BACK PASS IN WPL </li>
       </ul>
     </div>
 
